--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -175,6 +175,8 @@
     <Compile Include="HERE\Weather.cs" />
     <Compile Include="HERE\WeatherAlerts.cs" />
     <Compile Include="HERE\WeatherData.cs" />
+    <Compile Include="HttpClientExtensions\CacheFilter.cs" />
+    <Compile Include="HttpClientExtensions\HttpClientExtensions.cs" />
     <Compile Include="Icons\IWeatherIconsProvider.cs" />
     <Compile Include="Icons\WeatherIconicProvider.cs" />
     <Compile Include="Icons\WeatherIconProvider.cs" />
@@ -338,6 +340,12 @@
     <EmbeddedResource Include="Properties\SimpleWeather.Shared.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CacheCow.Client">
+      <Version>2.8.3</Version>
+    </PackageReference>
+    <PackageReference Include="CacheCow.Client.FileStore">
+      <Version>2.8.3</Version>
+    </PackageReference>
     <PackageReference Include="FirebaseAuthentication.net">
       <Version>3.7.1</Version>
     </PackageReference>
@@ -382,6 +390,9 @@
     </PackageReference>
     <PackageReference Include="SQLiteNetExtensions.Async">
       <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>5.0.2</Version>
