MapTileRadarViewProvider: add singleton instance for MapControl
* Add static instance of MapControl
* Destroy instance on Window closed
* Remove MapControl reference from page before navigating to another page
* Fix issue when navigating between WeatherNow and Radar page

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Preferences\Settings_Features.xaml.cs">
       <DependentUpon>Settings_Features.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Radar\MapControlCreator.cs" />
     <Compile Include="Radar\NullSchool\EarthWindMapViewProvider.cs" />
     <Compile Include="Radar\MapTileRadarViewProvider.cs" />
     <Compile Include="Radar\OpenWeather\OWMRadarViewProvider.cs" />
