--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -176,6 +176,7 @@
     <Compile Include="HERE\WeatherAlerts.cs" />
     <Compile Include="HERE\WeatherData.cs" />
     <Compile Include="HttpClientExtensions\CacheFilter.cs" />
+    <Compile Include="HttpClientExtensions\FileStore.cs" />
     <Compile Include="HttpClientExtensions\HttpClientExtensions.cs" />
     <Compile Include="Icons\IWeatherIconsProvider.cs" />
     <Compile Include="Icons\WeatherIconicProvider.cs" />
@@ -341,9 +342,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CacheCow.Client">
-      <Version>2.8.3</Version>
-    </PackageReference>
-    <PackageReference Include="CacheCow.Client.FileStore">
       <Version>2.8.3</Version>
     </PackageReference>
     <PackageReference Include="FirebaseAuthentication.net">
