HttpClient: add DelagatingCacheStore to 'fix' HttpResponseMessage before caching
* If HttpResponseMessage contains 'invalid' header value (for "Server" or "Expires" mostly), an InvalidOperationException occurs when trying to deserialize the response
* Remove the Server header (not needed) and remove the Expires header (if invalid)

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -178,6 +178,7 @@
     <Compile Include="HttpClientExtensions\CacheFilter.cs" />
     <Compile Include="HttpClientExtensions\FileStore.cs" />
     <Compile Include="HttpClientExtensions\HttpClientExtensions.cs" />
+    <Compile Include="HttpClientExtensions\RemoveHeaderDelagatingCacheStore.cs" />
     <Compile Include="Icons\IWeatherIconsProvider.cs" />
     <Compile Include="Icons\WeatherIconicProvider.cs" />
     <Compile Include="Icons\WeatherIconProvider.cs" />
