Images: validate stored image before loading
* Validate that cached image is valid by checking file header
* If invalid, delete file and load remote image or default

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Utils\FeatureSettings.cs" />
     <Compile Include="Utils\FileLoggingTree.cs" />
     <Compile Include="Utils\FileUtils.cs" />
+    <Compile Include="Utils\ImageUtils.cs" />
     <Compile Include="Utils\JSONParser.cs" />
     <Compile Include="Utils\ListUtils.cs" />
     <Compile Include="Utils\LocationUtils.cs" />
