--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -309,8 +309,8 @@
     <Compile Include="UWP\Utils\FileUtils.cs" />
     <Compile Include="UWP\Utils\Settings.cs" />
     <Compile Include="UWP\Icons\WeatherIconsProvider.cs" />
-    <Compile Include="UWP\WeatherData\Images\ImageDataDatabase.cs" />
-    <Compile Include="UWP\WeatherData\Images\ImageDataHelperImpl.cs" />
+    <Compile Include="UWP\WeatherData\Images\FirebaseImageDatabase.cs" />
+    <Compile Include="UWP\WeatherData\Images\ImageDataHelperImplUWP.cs" />
     <Compile Include="UWP\WeatherData\WeatherProviderImpl.cs" />
     <Compile Include="ComponentModel\IViewModel.cs" />
     <Compile Include="WeatherApi\ForecastRootobject.cs" />
@@ -322,8 +322,10 @@
     <Compile Include="WeatherApi\WeatherData.cs" />
     <Compile Include="WeatherData\IAirQualityProvider.cs" />
     <Compile Include="WeatherData\IAstroDataProvider.cs" />
-    <Compile Include="WeatherData\Images\ImageDataDatabase.cs" />
+    <Compile Include="WeatherData\Images\FirebaseImageDatabase.cs" />
+    <Compile Include="WeatherData\Images\FirebaseImageDataHelper.cs" />
     <Compile Include="WeatherData\Images\ImageDataHelper.cs" />
+    <Compile Include="WeatherData\Images\ImageDataHelperRes.cs" />
     <Compile Include="WeatherData\Images\Model\ImageData.cs" />
     <Compile Include="WeatherData\IPollenProvider.cs" />
     <Compile Include="WeatherData\IWeatherAlertProvider.cs" />
@@ -405,13 +407,96 @@
     <Content Include="Assets\Backgrounds\day-cloudy.jpg" />
     <Content Include="Assets\Backgrounds\day-partlycloudy.jpg" />
     <Content Include="Assets\Backgrounds\day.jpg" />
+    <Content Include="Assets\Backgrounds\day\andrej-chudy-uivWDK2Ifrg-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\artem-labunsky-4RitkkRV_yw-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\danilo-batista-GXzjWurMTgQ-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\ian-dooley-hpTH5b6mo2s-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\joe-liu-5uwjlrpuo8I-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\kristijan-arsov-FpmcLSEmSjs-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\day\pexels-andreas-wohlfahrt-2397361.jpg" />
+    <Content Include="Assets\Backgrounds\day\pexels-jeffrey-czum-2501968.jpg" />
+    <Content Include="Assets\Backgrounds\day\pexels-md-hadiuzzaman-saikot-1627835.jpg" />
+    <Content Include="Assets\Backgrounds\day\vlado-paunovic-42iKFH4x2rA-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\dust\24183592502_934be1f3c6_k.jpg" />
+    <Content Include="Assets\Backgrounds\dust\26035222712_e9e8e7a5d0_k.jpg" />
+    <Content Include="Assets\Backgrounds\dust\3954030309_d7bb98c2b8_b.jpg" />
+    <Content Include="Assets\Backgrounds\dust\6966933612_950488b2cb_k.jpg" />
     <Content Include="Assets\Backgrounds\fog.jpg" />
+    <Content Include="Assets\Backgrounds\fog\bailey-anselme-rifTFcRLNuo-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\fog\federico-bottos-obQacWYxB1I-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\fog\niklas-herrmann-fjY26eEE78s-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\fog\pexels-eberhard-grossgasteiger-1367105.jpg" />
+    <Content Include="Assets\Backgrounds\fog\rowan-heuvel-RI_frMXeYf4-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\fog\staffan-kjellvestad-y1qOT82fd8k-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\blue-sky-cloudiness-clouds-cloudscape-449751.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\davies-designs-studio-f5_lfi2S-d4-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\jakob-rosen-Qw6WG-vfPfg-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\leo-rivas-a08PC2Rxl5U-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\nathan-dumlao-OHzkfrv9Ycw-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\pexels-mudassir-ali-3812763.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\pexels-nur-andi-ravsanjani-gusma-826810.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_day\pexels-prashant-gautam-3783385.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\aron-visuals-a5Vu31EHKT4-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\cloudy-2720975.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\ernest-brillo-1eiUyHTpcn8-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\ingmar-Z4r8t1V2xRg-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\patrick-hodskins-ZqsmxFxQyoY-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\mostlycloudy_night\vino-li-UqRlIU_qtLc-unsplash.jpg" />
     <Content Include="Assets\Backgrounds\night-cloudy.jpg" />
     <Content Include="Assets\Backgrounds\night-partlycloudy.jpg" />
     <Content Include="Assets\Backgrounds\night.jpg" />
+    <Content Include="Assets\Backgrounds\night\david-schultz-3pLZstuxScQ-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\night\omair-k-C1Rh71rLM3s-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\night\pexels-andre-furtado-234824.jpg" />
+    <Content Include="Assets\Backgrounds\night\pexels-brett-sayles-2865404.jpg" />
+    <Content Include="Assets\Backgrounds\night\touann-gatouillat-vergos-_bVXFL8q2XI-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\night\zoltan-tasi-RbWe2tBKCBk-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\anthony-delanoix-urUdKCxsTUI-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\ja-kubislav-9gUhbFn63TM-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\levan-badzgaradze-tvXUALqw-gI-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\nagy-arnold-6Wtka7XyX84-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\pexels-jeffrey-czum-3330175.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_day\pexels-stijn-dijkstra-2562178.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\ingmar-qQsJ_tLCCQQ-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\luke-stackpoole-D5b3iZF1RrI-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\pexels-andre-moura-2499416.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\pexels-benjamin-suter-2962278.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\pexels-roberto-nickson-2775580.jpg" />
+    <Content Include="Assets\Backgrounds\partlycloudy_night\pexels-rok-romih-3489072.jpg" />
     <Content Include="Assets\Backgrounds\rain.jpg" />
+    <Content Include="Assets\Backgrounds\rain\max-bender-1YHXFeOYpN0-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain\pexels-josh-hild-2448749.jpg" />
+    <Content Include="Assets\Backgrounds\rain\pexels-nur-andi-ravsanjani-gusma-1915184.jpg" />
+    <Content Include="Assets\Backgrounds\rain\rain-2179933.jpg" />
+    <Content Include="Assets\Backgrounds\rain\storyphotos4u-rsilYJQOoVo-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain\suhyeon-choi-HCDugQDdtfc-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\andy-grizzell-zdbvMrmpqIw-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\byron-johnson-xrzHZfJ7lxQ-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\eric-zhu-aJOslo_ZuWM-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\george-huang-4kKptjMSaU0-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\pexels-artem-saranin-1202841.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\valentin-muller-bWtd1ZyEy6w-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\rain_night\walter-randlehoff-jg486JWaYLc-unsplash.jpg" />
     <Content Include="Assets\Backgrounds\snow.jpg" />
+    <Content Include="Assets\Backgrounds\snow\4334136866_197f370ef3_k.jpg" />
+    <Content Include="Assets\Backgrounds\snow\aditya-vyas-PzhmEp_aDU4-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\snow\belkacem-makhloufi-xIltuZXzueg-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\snow\christian-spuller-Oaec-W0b2ss-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\snow\jack-church-nL_hcJZdcnw-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\snow\mahir-uysal-ubn_vqSQ5tY-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\snow\nikita-ignatev-rt1eLhoWWE8-unsplash.jpg" />
     <Content Include="Assets\Backgrounds\storms.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\anandu-vinod-pbxwxwfI0B4-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\daoudi-aissa-Pe1Ol9oLc4o-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\pexels-alex-conchillos-3888585.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\pexels-alex-conchillos-3941855.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\pexels-ave-calvar-martinez-3010340.jpg" />
+    <Content Include="Assets\Backgrounds\stormy\yousef-espanioly-bdV1Vb5GY-Q-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\tstorms_night\ali-arif-soydas-wwzLVOvzy6w-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\tstorms_night\florian-olivo-q7pjd0rfQqY-unsplash.jpg" />
+    <Content Include="Assets\Backgrounds\tstorms_night\pexels-ilias-tsoutsoulis-3636150.jpg" />
+    <Content Include="Assets\Backgrounds\tstorms_night\pexels-ilias-tsoutsoulis-3636156.jpg" />
+    <Content Include="Assets\Backgrounds\tstorms_night\sadman-sakib-3tc2Rfa0OPA-unsplash.jpg" />
     <Content Include="Assets\Providers\bingmaps.png" />
     <Content Include="Assets\Providers\bingmaps_dark.png" />
     <Content Include="Assets\Providers\here.png" />
@@ -1939,6 +2024,7 @@
     <None Include="Keys\TimeZoneAPI.cs.bak" />
     <None Include="Keys\WeatherApiKey.cs.bak" />
     <None Include="Keys\WUnlockedKey.cs.bak" />
+    <PRIResource Include="Strings\en-US\Backgrounds.resw" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Timber\Timber.csproj">
