--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -264,6 +264,7 @@
     </Compile>
     <Compile Include="Helpers\BackgroundTaskHelper.cs" />
     <Compile Include="Helpers\BindingExtensions.cs" />
+    <Compile Include="Helpers\DetailsItemGridFilterConverter.cs" />
     <Compile Include="Helpers\IconForegroundConverter.cs" />
     <Compile Include="Helpers\ObjectContainer.cs" />
     <Compile Include="Helpers\RectHelperExtensions.cs" />
