Weather: update de/serializers to match the Utf8Json standard
* Add formatter attributes where necessary
* Update serialization to match the way Utf8Json handles serialization (should reduce parsing issues if parsed by Utf8Json generated formatters)

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Utf8JsonGen\EnumerableFormatter.cs" />
     <Compile Include="Utf8JsonGen\EnumFormatter.cs" />
     <Compile Include="Utf8JsonGen\EnumResolver.cs" />
+    <Compile Include="Utf8JsonGen\Utf8JsonExtensions.cs" />
     <Compile Include="Utf8JsonGen\Utf8JsonGenerated.cs" />
     <Compile Include="Utf8JsonGen\Utf8JsonResolver.cs" />
     <Compile Include="Utils\AirQualityUtils.cs" />
