WeatherNowViewModel: update DetailsMap implementation
* Override get method to avoid KeyNotFoundException when key is not present and just return null/default

--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -156,6 +156,8 @@
     <Compile Include="Controls\WeatherAlertsViewModel.cs" />
     <Compile Include="Controls\WeatherAlertViewModel.cs" />
     <Compile Include="Controls\WeatherNowViewModel.cs" />
+    <Compile Include="Controls\WeatherNowViewModel.DetailsMap.cs" />
+    <Compile Include="Controls\WeatherNowViewModel.DetailsMap.Dictionary.cs" />
     <Compile Include="DAO\LocationData.cs" />
     <Compile Include="DAO\Weather.cs" />
     <Compile Include="DAO\WeatherAlert.cs" />
