--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -159,6 +159,8 @@
     <Compile Include="DAO\LocationData.cs" />
     <Compile Include="DAO\Weather.cs" />
     <Compile Include="DAO\WeatherAlert.cs" />
+    <Compile Include="Extras\DefaultExtrasServiceImpl.cs" />
+    <Compile Include="Extras\IExtrasService.cs" />
     <Compile Include="Firebase\FirebaseAuthHelper.cs" />
     <Compile Include="Firebase\FirebaseDatabaseHelper.cs" />
     <Compile Include="HERE\Alerts.cs" />
@@ -228,7 +230,7 @@
     <Compile Include="RemoteConfig\RemoteConfig.cs" />
     <Compile Include="RemoteConfig\Utf8JsonGen\Utf8JsonGenerated.cs" />
     <Compile Include="RemoteConfig\WeatherProviderConfig.cs" />
-    <Compile Include="SimpleLibrary.cs" />
+    <Compile Include="SharedModule.cs" />
     <Compile Include="SMC\SunMoonCalcProvider.cs" />
     <Compile Include="SMC\SunMoonCalculator.cs" />
     <Compile Include="SQLiteNet\SQLiteNetPCLExtensions.cs" />
@@ -366,6 +368,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.HashCode">
       <Version>1.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.13</Version>
