--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -174,6 +174,7 @@
     <Compile Include="BackgroundTasks\DailyNotificationTask.cs" />
     <Compile Include="BackgroundTasks\UpdateTask.cs" />
     <Compile Include="BackgroundTasks\WeatherTileUpdaterTask.cs" />
+    <Compile Include="Controls\AlignableWrapPanel.cs" />
     <Compile Include="Controls\AQIForecastControl.xaml.cs">
       <DependentUpon>AQIForecastControl.xaml</DependentUpon>
     </Compile>
