--- a/SimpleWeather.Shared/SimpleWeather.Shared.csproj
+++ b/SimpleWeather.Shared/SimpleWeather.Shared.csproj
@@ -154,8 +154,8 @@
     <Compile Include="Controls\WeatherAlertsViewModel.cs" />
     <Compile Include="Controls\WeatherAlertViewModel.cs" />
     <Compile Include="Controls\WeatherNowViewModel.cs" />
-    <Compile Include="Controls\WeatherNowViewModel.DetailsMap.cs" />
-    <Compile Include="Controls\WeatherNowViewModel.DetailsMap.Dictionary.cs" />
+    <Compile Include="Controls\DetailsMap.cs" />
+    <Compile Include="Controls\DetailsMap.Dictionary.cs" />
     <Compile Include="DAO\LocationData.cs" />
     <Compile Include="DAO\Weather.cs" />
     <Compile Include="DAO\WeatherAlert.cs" />
