UnitTests: configure dependencies

--- a/UnitTestProject/UnitTestProject.csproj
+++ b/UnitTestProject/UnitTestProject.csproj
@@ -165,6 +165,10 @@
       <Project>{0CAA3B62-12E0-4418-8E32-95AEECA0AF97}</Project>
       <Name>SimpleWeather.Backgrounds</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SimpleWeather.Extras\SimpleWeather.Extras.csproj">
+      <Project>{0cc840eb-6362-44e7-95fe-22602abddc8b}</Project>
+      <Name>SimpleWeather.Extras</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleWeather.Shared\SimpleWeather.Shared.csproj">
       <Project>{a92be3f1-3252-4650-a17e-498b223bd039}</Project>
       <Name>SimpleWeather.Shared</Name>
